Fix overlap between profile and education

--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -32,14 +32,6 @@
   height: 100vh;
 }
 
-.profile {
-  background-color: #f3efe0;
-  background-size: cover;
-  width: 100vw;
-  height: 100vh;
-  padding: 50px;
-}
-
 .headline {
   text-align: center;
 }
@@ -58,28 +50,21 @@ img {
   border-radius: 5px;
 }
 
-.education {
-  background-color: white;
-  background-size: cover;
-  width: 100vw;
-  height: 100vh;
+.profile {
+  background-color: #f3efe0;
   padding: 50px;
 }
 
-.lighthouse-labs {
+.education {
+  background-color: white;
+  padding: 50px;
+}
+
+.lighthouse-labs, .university-of-waterloo {
   color: black;
 }
 
-.lighthouse-labs:hover {
-  color: black;
-  text-decoration: none;
-}
-
-.university-of-waterloo {
-  color: black;
-}
-
-.university-of-waterloo:hover {
+.lighthouse-labs:hover, .university-of-waterloo:hover {
   color: black;
   text-decoration: none;
 }
